--- a/DeviceLockController/res/values/strings.xml
+++ b/DeviceLockController/res/values/strings.xml
@@ -237,4 +237,13 @@
     <!-- TODO(b/279608060): Review this message with akintola@ -->
     <!-- Toast message explaining why the user needs to grant permission to send notification. [CHAR LIMIT=NONE] -->
     <string name="toast_message_grant_notification_permission">Please allow notification from DeviceLock to continue deferring the enrollment of the device.</string>
+    <!-- Title text of the provisioning failed screen, this tells the user provisioning of their device failed. [CHAR LIMIT=60] -->
+    <string name="provisioning_failed">Financing provisioning has failed</string>
+    <!-- Subheader of the provisioning failed screen, this tells the user to click the link to contact their financier for help. [CHAR LIMIT=NONE] -->
+    <!-- TODO(b/286245345): "Learn more" should point to the support URL -->
+    <string name="click_to_contact_financier">Please click here for ways to contact your financier. Learn more</string>
+    <!-- Button text used to let the user exit the Device lock controller app. [CHAR LIMIT=20] -->
+    <string name="exit">Exit</string>
+    <!-- Button text used to let the user try provisioning one more time. [CHAR LIMIT=20] -->
+    <string name="retry">Retry</string>
 </resources>
