--- a/DeviceLockController/res/values-lt/strings.xml
+++ b/DeviceLockController/res/values-lt/strings.xml
@@ -124,7 +124,8 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"Visi įrenginio duomenys bus ištrinti. Jei reikia pagalbos dėl įrenginio registracijos, susisiekite su „<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>“"</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"Leiskite „DeviceLock“ pranešimus, kad ir toliau atidėtumėte įrenginio registraciją."</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"Finansavimo pateikti nepavyko"</string>
-    <string name="click_to_contact_financier" msgid="8493790143035086516">"Spustelėkite čia ir sužinokite, kaip susisiekti su finansuotoju. Sužinokite daugiau"</string>
+    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
+    <skip />
     <string name="exit" msgid="645084771882733921">"Išeiti"</string>
     <string name="retry" msgid="7497287909193345356">"Bandyti dar kartą"</string>
 </resources>
