--- a/DeviceLockController/res/values-pa/strings.xml
+++ b/DeviceLockController/res/values-pa/strings.xml
@@ -124,8 +124,7 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"ਸਾਰੇ ਡੀਵਾਈਸ ਡਾਟੇ ਨੂੰ ਮਿਟਾ ਦਿੱਤਾ ਜਾਵੇਗਾ। ਤੁਹਾਡੇ ਡੀਵਾਈਸ ਨੂੰ ਦਰਜ ਕਰਨ ਵਿੱਚ ਮਦਦ ਲਈ, <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ਨੂੰ ਸੰਪਰਕ ਕਰੋ"</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"ਕਿਰਪਾ ਕਰਕੇ ਡੀਵਾਈਸ ਨੂੰ ਦਰਜ ਕਰਨ ਦੀ ਪ੍ਰਕਿਰਿਆ ਨੂੰ ਮੁਲਤਵੀ ਕਰਨਾ ਜਾਰੀ ਰੱਖਣ ਲਈ, DeviceLock ਤੋਂ ਸੂਚਨਾ ਦੀ ਇਜਾਜ਼ਤ ਦਿਓ।"</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"ਵਿੱਤ ਵਿਵਸਥਾ ਅਸਫਲ ਰਹੀ"</string>
-    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
-    <skip />
+    <string name="click_to_contact_financier" msgid="9107827438262930445">"ਕਿਰਪਾ ਕਰਕੇ ਆਪਣੇ ਫਾਈਨੈਂਸਰ ਨਾਲ ਸੰਪਰਕ ਕਰਨ ਦੇ ਤਰੀਕਿਆਂ ਲਈ ਇੱਥੇ ਕਲਿੱਕ ਕਰੋ। <xliff:g id="SUPPORT_URL_START">&lt;a href=%1$s&gt;</xliff:g>ਹੋਰ ਜਾਣੋ<xliff:g id="SUPPORT_URL_END">&lt;/a&gt;</xliff:g>"</string>
     <string name="exit" msgid="645084771882733921">"ਬਾਹਰ ਜਾਓ"</string>
     <string name="retry" msgid="7497287909193345356">"ਮੁੜ-ਕੋਸ਼ਿਸ਼ ਕਰੋ"</string>
 </resources>
