--- a/DeviceLockController/res/values-az/strings.xml
+++ b/DeviceLockController/res/values-az/strings.xml
@@ -124,8 +124,7 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"Bütün cihaz datası silinəcək. Cihaz qeydiyyatı üzrə kömək üçün <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ilə əlaqə saxlayın"</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"Cihaz qeydiyyatını təxirə salmaq üçün DeviceLock bildirişinə icazə verin."</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"Maliyyə təminatı alınmadı"</string>
-    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
-    <skip />
+    <string name="click_to_contact_financier" msgid="9107827438262930445">"Maliyyəçi ilə əlaqə üsulları üçün bura klikləyin. <xliff:g id="SUPPORT_URL_START">&lt;a href=%1$s&gt;</xliff:g>Ətraflı məlumat<xliff:g id="SUPPORT_URL_END">&lt;/a&gt;</xliff:g>"</string>
     <string name="exit" msgid="645084771882733921">"Çıxın"</string>
     <string name="retry" msgid="7497287909193345356">"Təkrar sınayın"</string>
 </resources>
