--- a/DeviceLockController/res/values-be/strings.xml
+++ b/DeviceLockController/res/values-be/strings.xml
@@ -124,8 +124,7 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"Усе даныя прылады будуць выдалены. Па дапамогу з рэгістрацыяй звяртайцеся ў кампанію \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\"."</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"Каб адкласці рэгістрацыю прылады, дазвольце DeviceLock прысылаць вам апавяшчэнні."</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"Не ўдалося падрыхтаваць прыладу да праграмы фінансавання"</string>
-    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
-    <skip />
+    <string name="click_to_contact_financier" msgid="9107827438262930445">"Вы можаце звязацца з фінансавым спецыялістам: націсніце <xliff:g id="SUPPORT_URL_START">&lt;a href=%1$s&gt;</xliff:g>тут<xliff:g id="SUPPORT_URL_END">&lt;/a&gt;</xliff:g>, каб даведацца больш"</string>
     <string name="exit" msgid="645084771882733921">"Выйсці"</string>
     <string name="retry" msgid="7497287909193345356">"Паўтарыць спробу"</string>
 </resources>
