--- a/DeviceLockController/res/values-bn/strings.xml
+++ b/DeviceLockController/res/values-bn/strings.xml
@@ -124,8 +124,7 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"ডিভাইসের সব ডেটা মুছে ফেলা হবে। আপনার ডিভাইস এনরোল করার জন্য <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>-এর সাথে যোগাযোগ করুন"</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"ডিভাইস এনরোলমেন্টের প্রক্রিয়া বন্ধ রাখতে, DeviceLock থেকে বিজ্ঞপ্তি পাঠানোর অনুমতি দিন।"</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"ফাইন্যান্সিং প্রভিশন করা যায়নি"</string>
-    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
-    <skip />
+    <string name="click_to_contact_financier" msgid="9107827438262930445">"আপনার অর্থদাতার সাথে কীভাবে যোগাযোগ করবেন তা জানতে, এখানে ক্লিক করুন। <xliff:g id="SUPPORT_URL_START">&lt;a href=%1$s&gt;</xliff:g>আরও জানুন<xliff:g id="SUPPORT_URL_END">&lt;/a&gt;</xliff:g>"</string>
     <string name="exit" msgid="645084771882733921">"বেরিয়ে আসুন"</string>
     <string name="retry" msgid="7497287909193345356">"আবার চেষ্টা করুন"</string>
 </resources>
