--- a/DeviceLockController/res/values-ca/strings.xml
+++ b/DeviceLockController/res/values-ca/strings.xml
@@ -124,8 +124,7 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"Totes les dades del dispositiu se suprimiran. Per obtenir ajuda amb la inscripció del dispositiu, contacta amb <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>."</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"Permet les notificacions de DeviceLock per continuar diferint la inscripció del dispositiu."</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"S\'ha produït un error amb el proveïment del finançament"</string>
-    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
-    <skip />
+    <string name="click_to_contact_financier" msgid="9107827438262930445">"Fes clic aquí per consultar com pots contactar amb el teu financer. <xliff:g id="SUPPORT_URL_START">&lt;a href=%1$s&gt;</xliff:g>Més informació<xliff:g id="SUPPORT_URL_END">&lt;/a&gt;</xliff:g>"</string>
     <string name="exit" msgid="645084771882733921">"Surt"</string>
     <string name="retry" msgid="7497287909193345356">"Torna-ho a provar"</string>
 </resources>
