--- a/DeviceLockController/res/values-da/strings.xml
+++ b/DeviceLockController/res/values-da/strings.xml
@@ -124,8 +124,7 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"Alle enhedsdata slettes. Kontakt <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> for at få hjælp til at tilmelde din enhed"</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"Tillad notifikation fra DeviceLock for at fortsætte med at udskyde tilmeldingen af enheden."</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"Provisionering af finansiering mislykkedes"</string>
-    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
-    <skip />
+    <string name="click_to_contact_financier" msgid="9107827438262930445">"Klik her for at finde ud af, hvordan du kan kontakte din financier. <xliff:g id="SUPPORT_URL_START">&lt;a href=%1$s&gt;</xliff:g>Få flere oplysninger<xliff:g id="SUPPORT_URL_END">&lt;/a&gt;</xliff:g>"</string>
     <string name="exit" msgid="645084771882733921">"Afslut"</string>
     <string name="retry" msgid="7497287909193345356">"Prøv igen"</string>
 </resources>
