--- a/DeviceLockController/res/values-es-rUS/strings.xml
+++ b/DeviceLockController/res/values-es-rUS/strings.xml
@@ -75,7 +75,7 @@
     <string name="restrictions_lifted" msgid="5785586265984319396">"Se eliminaron todas las restricciones aplicadas a tu dispositivo"</string>
     <string name="uninstall_kiosk_app" msgid="3459557395024053988">"Puedes desinstalar la aplicación de Kiosco de tu dispositivo"</string>
     <string name="getting_device_ready" msgid="2829009584599871699">"Preparando el dispositivo…"</string>
-    <string name="this_may_take_a_few_minutes" msgid="2482876246874429351">"Este paso podría demorar unos minutos"</string>
+    <string name="this_may_take_a_few_minutes" msgid="2482876246874429351">"Este proceso puede tardar unos minutos"</string>
     <string name="installing_kiosk_app" msgid="324208168205545860">"Instalando la app de <xliff:g id="CREDITOR_APP">%1$s</xliff:g>…"</string>
     <string name="opening_kiosk_app" msgid="2021888641430165654">"Abriendo la app de <xliff:g id="CREDITOR_APP">%1$s</xliff:g>…"</string>
     <string name="settings_banner_title" msgid="527041021011279252">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> proporciona el dispositivo"</string>
