--- a/DeviceLockController/res/values-et/strings.xml
+++ b/DeviceLockController/res/values-et/strings.xml
@@ -124,8 +124,7 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"Kõik seadme andmed kustutatakse. Seadme registreerimisel abi saamiseks võtke ühendust pakkujaga <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"Seadme registreerimise edasilükkamise jätkamiseks lubage märguanded rakenduselt DeviceLock."</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"Järelmaksu pakkumine ebaõnnestus"</string>
-    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
-    <skip />
+    <string name="click_to_contact_financier" msgid="9107827438262930445">"Klõpsake siin, et näha, kuidas oma järelmaksu pakkujaga ühendust võtta. <xliff:g id="SUPPORT_URL_START">&lt;a href=%1$s&gt;</xliff:g>Lisateave<xliff:g id="SUPPORT_URL_END">&lt;/a&gt;</xliff:g>"</string>
     <string name="exit" msgid="645084771882733921">"Välju"</string>
     <string name="retry" msgid="7497287909193345356">"Proovi uuesti"</string>
 </resources>
