--- a/DeviceLockController/res/values-gl/strings.xml
+++ b/DeviceLockController/res/values-gl/strings.xml
@@ -124,8 +124,7 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"Eliminaranse todos os datos do dispositivo. Se precisas axuda para inscribilo, ponte en contacto con <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"Permite as notificacións de DeviceLock para continuar pospoñendo a inscrición do dispositivo."</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"Produciuse un erro durante o aprovisionamento financeiro"</string>
-    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
-    <skip />
+    <string name="click_to_contact_financier" msgid="9107827438262930445">"Fai clic aquí para poñerte en contacto co teu financeiro. <xliff:g id="SUPPORT_URL_START">&lt;a href=%1$s&gt;</xliff:g>Máis información<xliff:g id="SUPPORT_URL_END">&lt;/a&gt;</xliff:g>"</string>
     <string name="exit" msgid="645084771882733921">"Saír"</string>
     <string name="retry" msgid="7497287909193345356">"Tentar de novo"</string>
 </resources>
