--- a/DeviceLockController/res/values-gu/strings.xml
+++ b/DeviceLockController/res/values-gu/strings.xml
@@ -124,8 +124,7 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"ડિવાઇસનો તમામ ડેટા ડિલીટ કરવામાં આવશે. તમારા ડિવાઇસની નોંધણીમાં સહાય માટે, <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>નો સંપર્ક કરો"</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"આ ડિવાઇસની નોંધણી મુલતવી રાખવાનું ચાલુ રાખવા માટે, કૃપા કરીને DeviceLockના નોટિફિકેશનને મંજૂરી આપો."</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"ફાઇનાન્સ સંબંધી જોગવાઈઓ નિષ્ફળ થઈ છે"</string>
-    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
-    <skip />
+    <string name="click_to_contact_financier" msgid="9107827438262930445">"તમારા ફાઇનાન્સરનો સંપર્ક કરવાની રીતો જાણવા માટે, કૃપા કરીને અહીં ક્લિક કરો. <xliff:g id="SUPPORT_URL_START">&lt;a href=%1$s&gt;</xliff:g>વધુ જાણો<xliff:g id="SUPPORT_URL_END">&lt;/a&gt;</xliff:g>"</string>
     <string name="exit" msgid="645084771882733921">"બહાર નીકળો"</string>
     <string name="retry" msgid="7497287909193345356">"ફરી પ્રયાસ કરો"</string>
 </resources>
