--- a/DeviceLockController/res/values-in/strings.xml
+++ b/DeviceLockController/res/values-in/strings.xml
@@ -124,8 +124,7 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"Semua data perangkat akan dihapus. Untuk mendapatkan bantuan dalam proses pendaftaran perangkat Anda, hubungi <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"Berikan izin notifikasi dari DeviceLock untuk melanjutkan proses penundaan pendaftaran perangkat."</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"Penyediaan keuangan gagal"</string>
-    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
-    <skip />
+    <string name="click_to_contact_financier" msgid="9107827438262930445">"Klik di sini untuk mengetahui cara menghubungi penyedia dana Anda. <xliff:g id="SUPPORT_URL_START">&lt;a href=%1$s&gt;</xliff:g>Pelajari lebih lanjut<xliff:g id="SUPPORT_URL_END">&lt;/a&gt;</xliff:g>"</string>
     <string name="exit" msgid="645084771882733921">"Keluar"</string>
     <string name="retry" msgid="7497287909193345356">"Coba lagi"</string>
 </resources>
