--- a/DeviceLockController/res/values-lv/strings.xml
+++ b/DeviceLockController/res/values-lv/strings.xml
@@ -124,8 +124,7 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"Visi ierīces dati tiks izdzēsti. Lai saņemtu palīdzību par ierīces reģistrēšanu, sazinieties ar <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>."</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"Lūdzu, atļaujiet DeviceLock paziņojumu, lai turpinātu ierīces reģistrācijas atlikšanu."</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"Neizdevās nodrošināt finansējumu"</string>
-    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
-    <skip />
+    <string name="click_to_contact_financier" msgid="9107827438262930445">"Lūdzu, noklikšķiniet šeit, lai uzzinātu, kā sazināties ar finansētāju. <xliff:g id="SUPPORT_URL_START">&lt;a href=%1$s&gt;</xliff:g>Uzziniet vairāk<xliff:g id="SUPPORT_URL_END">&lt;/a&gt;</xliff:g>."</string>
     <string name="exit" msgid="645084771882733921">"Iziet"</string>
     <string name="retry" msgid="7497287909193345356">"Mēģināt vēlreiz"</string>
 </resources>
