--- a/DeviceLockController/res/values-nb/strings.xml
+++ b/DeviceLockController/res/values-nb/strings.xml
@@ -124,8 +124,7 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"Alle enhetsdata slettes. Hvis du trenger hjelp med å registrere enheten din, bør du kontakte <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"Du må tillate varsler fra DeviceLock for å fortsette å utsette registreringen av enheten."</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"Kunne ikke provisjonere finansiering"</string>
-    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
-    <skip />
+    <string name="click_to_contact_financier" msgid="9107827438262930445">"Klikk her for å finne måter å kontakte finansieringsløsningen din på. <xliff:g id="SUPPORT_URL_START">&lt;a href=%1$s&gt;</xliff:g>Finn ut mer<xliff:g id="SUPPORT_URL_END">&lt;/a&gt;</xliff:g>"</string>
     <string name="exit" msgid="645084771882733921">"Avslutt"</string>
     <string name="retry" msgid="7497287909193345356">"Prøv på nytt"</string>
 </resources>
