--- a/DeviceLockController/res/values-or/strings.xml
+++ b/DeviceLockController/res/values-or/strings.xml
@@ -124,8 +124,7 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"ସମସ୍ତ ଡିଭାଇସ ଡାଟା ଡିଲିଟ ହୋଇଯିବ। ଆପଣଙ୍କ ଡିଭାଇସକୁ ପଞ୍ଜିକରଣ କରିବାରେ ସହାୟତା ପାଇଁ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ସହ କଣ୍ଟାକ୍ଟ କରନ୍ତୁ"</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"ଡିଭାଇସର ପଞ୍ଜିକରଣ ବିଳମ୍ବ କରିବା ଜାରି ରଖିବା ପାଇଁ ଦୟାକରି DeviceLockରୁ ବିଜ୍ଞପ୍ତିକୁ ଅନୁମତି ଦିଅନ୍ତୁ।"</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"ଫାଇନାନ୍ସିଂ ବ୍ୟବସ୍ଥା ବିଫଳ ହୋଇଛି"</string>
-    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
-    <skip />
+    <string name="click_to_contact_financier" msgid="9107827438262930445">"ଆପଣଙ୍କ ଫାଇନାନ୍ସର ସହ କଣ୍ଟାକ୍ଟ କରିବାକୁ ଉପାୟଗୁଡ଼ିକ ପାଇଁ ଦୟାକରି ଏଠାରେ କ୍ଲିକ କରନ୍ତୁ। <xliff:g id="SUPPORT_URL_START">&lt;a href=%1$s&gt;</xliff:g>ଅଧିକ ଜାଣନ୍ତୁ<xliff:g id="SUPPORT_URL_END">&lt;/a&gt;</xliff:g>"</string>
     <string name="exit" msgid="645084771882733921">"ବାହାରି ଯାଆନ୍ତୁ"</string>
     <string name="retry" msgid="7497287909193345356">"ପୁଣି ଚେଷ୍ଟା କରନ୍ତୁ"</string>
 </resources>
