--- a/DeviceLockController/res/values-si/strings.xml
+++ b/DeviceLockController/res/values-si/strings.xml
@@ -124,8 +124,7 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"සියලු උපාංග දත්ත මකා දැමෙනු ඇත. ඔබේ උපාංගය ලියාපදිංචි කිරීමට උදවු සඳහා, <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> සම්බන්ධ කර ගන්න"</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"උපාංගය ලියාපදිංචි කිරීම කල් දැමීම දිගටම කරගෙන යාමට DeviceLock වෙතින් දැනුම්දීමට ඉඩ දෙන්න."</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"මූල්‍ය ප්‍රතිපාදන අසමත් වී ඇත"</string>
-    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
-    <skip />
+    <string name="click_to_contact_financier" msgid="9107827438262930445">"ඔබේ මූල්‍යකරු සම්බන්ධ කර ගැනීමට ක්‍රම සඳහා මෙතැන ක්ලික් කරන්න. <xliff:g id="SUPPORT_URL_START">&lt;a href=%1$s&gt;</xliff:g>තව දැන ගන්න<xliff:g id="SUPPORT_URL_END">&lt;/a&gt;</xliff:g>"</string>
     <string name="exit" msgid="645084771882733921">"පිටවන්න"</string>
     <string name="retry" msgid="7497287909193345356">"යළි උත්සාහ කරන්න"</string>
 </resources>
