--- a/DeviceLockController/res/values-sq/strings.xml
+++ b/DeviceLockController/res/values-sq/strings.xml
@@ -124,8 +124,7 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"Të gjitha të dhënat e pajisjes do të fshihen. Për ndihmë në lidhje me regjistrimin e pajisjes, kontakto <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"Lejo njoftimet nga DeviceLock që të vazhdosh të shtysh regjistrimin e pajisjes."</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"Përgatitja e financimit nuk u krye"</string>
-    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
-    <skip />
+    <string name="click_to_contact_financier" msgid="9107827438262930445">"Kliko këtu për mënyrat për të kontaktuar me financuesin tënd. <xliff:g id="SUPPORT_URL_START">&lt;a href=%1$s&gt;</xliff:g>Mëso më shumë<xliff:g id="SUPPORT_URL_END">&lt;/a&gt;</xliff:g>"</string>
     <string name="exit" msgid="645084771882733921">"Dil"</string>
     <string name="retry" msgid="7497287909193345356">"Riprovo"</string>
 </resources>
