--- a/DeviceLockController/res/values-sv/strings.xml
+++ b/DeviceLockController/res/values-sv/strings.xml
@@ -124,8 +124,7 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"All enhetsdata raderas. Kontakta <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> om du behöver hjälp att registrera enheten"</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"Tillåt aviseringar från DeviceLock för att fortsätta att skjuta upp registreringen av enheten."</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"Tillhandahållande av finansiering misslyckades"</string>
-    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
-    <skip />
+    <string name="click_to_contact_financier" msgid="9107827438262930445">"Klicka här för att visa hur du kontaktar finansiären. <xliff:g id="SUPPORT_URL_START">&lt;a href=%1$s&gt;</xliff:g>Läs mer<xliff:g id="SUPPORT_URL_END">&lt;/a&gt;</xliff:g>"</string>
     <string name="exit" msgid="645084771882733921">"Stäng"</string>
     <string name="retry" msgid="7497287909193345356">"Försök igen"</string>
 </resources>
