--- a/DeviceLockController/res/values-tr/strings.xml
+++ b/DeviceLockController/res/values-tr/strings.xml
@@ -124,8 +124,7 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"Tüm cihaz verileri silinecek. Cihazınızı kaydetmeyle ilgili yardım almak için <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ile iletişime geçin"</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"Cihazın kaydını ertelemeye devam etmek için lütfen DeviceLock bildirimlerine izin verin."</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"Finans provizyonu başarısız oldu"</string>
-    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
-    <skip />
+    <string name="click_to_contact_financier" msgid="9107827438262930445">"Finans yetkilinizle iletişime geçme yöntemleri için lütfen burayı tıklayın. <xliff:g id="SUPPORT_URL_START">&lt;a href=%1$s&gt;</xliff:g>Daha fazla bilgi<xliff:g id="SUPPORT_URL_END">&lt;/a&gt;</xliff:g>"</string>
     <string name="exit" msgid="645084771882733921">"Çıkış"</string>
     <string name="retry" msgid="7497287909193345356">"Tekrar dene"</string>
 </resources>
