--- a/DeviceLockController/res/values-uk/strings.xml
+++ b/DeviceLockController/res/values-uk/strings.xml
@@ -124,8 +124,7 @@
     <string name="device_reset_notification_content" msgid="7642367488663440437">"Усі дані пристрою буде видалено. Щоб отримати допомогу з реєстрацією пристрою, зв’яжіться з організацією <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="toast_message_grant_notification_permission" msgid="1902770796685661160">"Дозвольте сповіщення від DeviceLock, щоб продовжити відкладення реєстрації пристрою."</string>
     <string name="provisioning_failed" msgid="5350252817004028300">"Фінансування не надано"</string>
-    <!-- no translation found for click_to_contact_financier (9107827438262930445) -->
-    <skip />
+    <string name="click_to_contact_financier" msgid="9107827438262930445">"Натисніть тут, щоб дізнатися, як зв’язатися зі своїм кредитором. <xliff:g id="SUPPORT_URL_START">&lt;a href=%1$s&gt;</xliff:g>Докладніше<xliff:g id="SUPPORT_URL_END">&lt;/a&gt;</xliff:g>"</string>
     <string name="exit" msgid="645084771882733921">"Закрити"</string>
     <string name="retry" msgid="7497287909193345356">"Повторити"</string>
 </resources>
