--- a/DeviceLockController/res/values-bn/strings.xml
+++ b/DeviceLockController/res/values-bn/strings.xml
@@ -75,7 +75,7 @@
     <string name="restrictions_lifted" msgid="5785586265984319396">"আপনার ডিভাইসের উপরে থাকা সব বিধিনিষেধ তুলে নেওয়া হয়েছে"</string>
     <string name="uninstall_kiosk_app" msgid="3459557395024053988">"আপনার ডিভাইস থেকে Kiosk অ্যাপ আনইনস্টল করুন"</string>
     <string name="getting_device_ready" msgid="2829009584599871699">"আপনার ডিভাইস রেডি করা হচ্ছে…"</string>
-    <string name="this_may_take_a_few_minutes" msgid="2482876246874429351">"এতে কয়েক মিনিট সময় লাগতে পারে"</string>
+    <string name="this_may_take_a_few_minutes" msgid="2482876246874429351">"এজন্য কয়েক মিনিট সময় লাগতে পারে"</string>
     <string name="installing_kiosk_app" msgid="324208168205545860">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> অ্যাপ ইনস্টল করা হচ্ছে…"</string>
     <string name="opening_kiosk_app" msgid="2021888641430165654">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> অ্যাপ চালু হচ্ছে…"</string>
     <string name="settings_banner_title" msgid="527041021011279252">"ডিভাইসটি <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> দিয়েছে"</string>
