--- a/DeviceLockController/res/values-sw/strings.xml
+++ b/DeviceLockController/res/values-sw/strings.xml
@@ -75,7 +75,7 @@
     <string name="restrictions_lifted" msgid="5785586265984319396">"Kifaa chako kimeondolewa vizuizi vyote"</string>
     <string name="uninstall_kiosk_app" msgid="3459557395024053988">"Unaweza kuondoa programu ya Kiosk kwenye kifaa chako"</string>
     <string name="getting_device_ready" msgid="2829009584599871699">"Inatayarisha kifaa chako…"</string>
-    <string name="this_may_take_a_few_minutes" msgid="2482876246874429351">"Huenda hii ikachukua dakika kadhaa"</string>
+    <string name="this_may_take_a_few_minutes" msgid="2482876246874429351">"Huenda ikachukua dakika kadhaa"</string>
     <string name="installing_kiosk_app" msgid="324208168205545860">"Inasakinisha programu ya <xliff:g id="CREDITOR_APP">%1$s</xliff:g>…"</string>
     <string name="opening_kiosk_app" msgid="2021888641430165654">"Inafungua programu ya <xliff:g id="CREDITOR_APP">%1$s</xliff:g>…"</string>
     <string name="settings_banner_title" msgid="527041021011279252">"Kifaa kimetolewa na <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
