--- a/DeviceLockController/res/values-ar/strings.xml
+++ b/DeviceLockController/res/values-ar/strings.xml
@@ -45,7 +45,7 @@
     <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"إذا لم يكن تطبيق \"<xliff:g id="CREDITOR_APP">%1$s</xliff:g>\" متاحًا"</string>
     <string name="open_source_licenses" msgid="6464389386262455443">"تراخيص البرامج المفتوحة المصدر"</string>
     <string name="footer_notice_content_description" msgid="2160540400079419440">"لا تسري على هذا الجهاز ميزات الإدارة المُدرجة في قسم الجهاز المموَّل ضمن إعدادات الأمان."</string>
-    <string name="device_provided_by_provider" msgid="290593329676291991">"يتم توفير هذا الجهاز من قِبل \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\"."</string>
+    <string name="device_provided_by_provider" msgid="290593329676291991">"يتم توفير هذا الجهاز من قِبل \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\""</string>
     <string name="download_kiosk_app" msgid="1845089944897502656">"سيتم تلقائيًا تنزيل تطبيق Kiosk وتثبيته."</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"سيتم تثبيت تطبيق Kiosk على جهاز هذا المستخدِم."</string>
     <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"بإمكان \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\" فرض قيود على هذا الجهاز في حال عدم تسديد إحدى الدفعات."</string>
@@ -60,7 +60,8 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"معلومات"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"معلومات حول التمويل"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"تسجيل الجهاز"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"يمكنك الآن تسجيل جهازك في برنامج التمويل المقدَّم من \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\"."</string>
+    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
+    <skip />
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"يمكنك الآن تسجيل جهازك في برنامج الدعم المالي المقدَّم من \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\"."</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"لقد انضممت إلى برنامج الدعم المالي من \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\""</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"تسجيل الجهاز"</string>
