--- a/DeviceLockController/res/values-b+sr+Latn/strings.xml
+++ b/DeviceLockController/res/values-b+sr+Latn/strings.xml
@@ -18,7 +18,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name" msgid="5655878067457216814">"DeviceLockController"</string>
-    <string name="next_button" msgid="1856423430963548653">"Sledeće"</string>
+    <string name="next_button" msgid="1856423430963548653">"Dalje"</string>
     <string name="reset_button" msgid="4649354411129240809">"Resetuj"</string>
     <string name="setup_more_button" msgid="4456370972302510109">"Još"</string>
     <string name="setup_info_title_text" msgid="299562193092219293">"Kako <xliff:g id="CREDITOR_APP">%1$s</xliff:g> može da upravlja ovim uređajem"</string>
@@ -52,7 +52,7 @@
     <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> može da ograniči ovaj uređaj ako ne izvršite neophodna plaćanja. Detalje potražite u <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>uslovima i odredbama<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>."</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> može da ograniči ovaj uređaj ako vlasnik ne izvrši plaćanja"</string>
     <string name="previous" msgid="5241891780917802570">"Prethodno"</string>
-    <string name="next" msgid="8248291863254324326">"Sledeće"</string>
+    <string name="next" msgid="8248291863254324326">"Dalje"</string>
     <string name="start" msgid="2842214844667658537">"Pokreni"</string>
     <string name="ok" msgid="3568398726528719749">"Važi"</string>
     <string name="done" msgid="4507782734740410307">"Gotovo"</string>
@@ -60,7 +60,8 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Informacije"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Dodeljivanje"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Registrujte uređaj"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Sada možete da registrujete uređaj za <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> finansijski program"</string>
+    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
+    <skip />
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Sada možete da registrujete uređaj za <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> program subvencija"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Uključeni ste u <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> program subvencija"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Registracija uređaja"</string>
