--- a/DeviceLockController/res/values-en-rAU/strings.xml
+++ b/DeviceLockController/res/values-en-rAU/strings.xml
@@ -60,12 +60,12 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Info"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Provision info"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Enrol your device"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"You can now enrol your device in <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\'s financing programme"</string>
-    <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"You can now enrol your device in <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\'s subsidy program"</string>
-    <string name="subsidy_program_header" msgid="2321508488856303554">"You\'re on <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\'s subsidy program"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"You can now enrol your device in <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\'s finance programme"</string>
+    <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"You can now enrol your device in <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\'s subsidy programme"</string>
+    <string name="subsidy_program_header" msgid="2321508488856303554">"You\'re on <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\'s subsidy programme"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Device enrolment"</string>
     <string name="device_financing_enrollment_body_text" msgid="5506086383249511498">"Your device will be enrolled in <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\'s finance programme within 30 days"</string>
-    <string name="device_subsidy_enrollment_body_text" msgid="3971584929178719388">"Your device will be enrolled in <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\'s subsidy program within 30 days"</string>
+    <string name="device_subsidy_enrollment_body_text" msgid="3971584929178719388">"Your device will be enrolled in <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\'s subsidy programme within 30 days"</string>
     <string name="device_enrollment_notification_body_text" msgid="8755080244956655854">"Enrolment will resume at <xliff:g id="TIME">%1$s</xliff:g>. You can continue using your device."</string>
     <string name="continue_using_device" msgid="5816570734692191190">"You can continue using your device"</string>
     <string name="device_paid" msgid="6606280698381856804">"You paid for your device"</string>
