--- a/DeviceLockController/res/values-es-rUS/strings.xml
+++ b/DeviceLockController/res/values-es-rUS/strings.xml
@@ -46,9 +46,9 @@
     <string name="open_source_licenses" msgid="6464389386262455443">"Licencias de código abierto"</string>
     <string name="footer_notice_content_description" msgid="2160540400079419440">"Las funciones de administración de la sección de la Configuración de seguridad del dispositivo financiado no se aplican a este dispositivo."</string>
     <string name="device_provided_by_provider" msgid="290593329676291991">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> proporciona este dispositivo"</string>
-    <string name="download_kiosk_app" msgid="1845089944897502656">"Se descargará e instalará la aplicación de Kiosco automáticamente"</string>
+    <string name="download_kiosk_app" msgid="1845089944897502656">"Se descargará e instalará la aplicación de Kiosco automáticamente."</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"Se instalará la aplicación de Kiosco para este usuario"</string>
-    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> puede restringir este dispositivo si omites un pago"</string>
+    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> puede restringir este dispositivo si omites un pago."</string>
     <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> puede restringir este dispositivo si no realizas los pagos necesarios. Para obtener más información, consulta los <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>Términos y Condiciones<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>."</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> puede restringir este dispositivo si el propietario no realiza los pagos"</string>
     <string name="previous" msgid="5241891780917802570">"Anterior"</string>
@@ -60,7 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Información"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Datos de provisión"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Inscribe tu dispositivo"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Ya puedes inscribir tu dispositivo en el programa de financiación de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"Ya puedes inscribir tu dispositivo en el programa de financiación de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Ya puedes inscribir tu dispositivo en el programa de subsidios de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Eres parte del programa de subsidios de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Inscripción del dispositivo"</string>
