--- a/DeviceLockController/res/values-eu/strings.xml
+++ b/DeviceLockController/res/values-eu/strings.xml
@@ -31,9 +31,9 @@
     <string name="try_again" msgid="5964839819170927721">"Saiatu berriro"</string>
     <string name="reset_phone" msgid="1161657350311160627">"Berrezarri telefonoa"</string>
     <string name="control_section_title" msgid="2213476068991045785">"Zer egin dezake <xliff:g id="CREDITOR_APP">%1$s</xliff:g> aplikazioak?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"Ordainketa egin ezean, murriztu gailua"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"Deskargatu, instalatu eta eguneratu <xliff:g id="CREDITOR_APP">%1$s</xliff:g> aplikazioa"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"Desaktibatu arazketa-eginbideak"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"Ordainketa egin ezean, gailua murriztu"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> aplikazioa deskargatu, instalatu eta eguneratu"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"Arazketa-eginbideak desaktibatu"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"Zerk funtzionatzen du gailua blokeatuta dagoenean?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"Larrialdi-deien zerbitzuak"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Sarrerako deiak eta irteerako dei batzuk"</string>
@@ -60,7 +60,8 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Informazioa"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Hornikuntza-informazioa"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Erregistratu gailua"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Orain, gailua <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> hornitzailearen finantzaketa-programan erregistra dezakezu"</string>
+    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
+    <skip />
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Orain, gailua <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> hornitzailearen dirulaguntza-programan erregistra dezakezu"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> hornitzailearen dirulaguntza-programan zaude"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Gailuaren erregistroa"</string>
@@ -78,7 +79,7 @@
     <string name="installing_kiosk_app" msgid="324208168205545860">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> aplikazioa instalatzen…"</string>
     <string name="opening_kiosk_app" msgid="2021888641430165654">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> aplikazioa irekitzen…"</string>
     <string name="settings_banner_title" msgid="527041021011279252">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> hornitzaileak emandako gailua"</string>
-    <string name="settings_banner_body" msgid="5814902066260202824">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> hornitzaileak gailuko ezarpenak alda ditzake"</string>
+    <string name="settings_banner_body" msgid="5814902066260202824">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> hornitzaileak gailuaren ezarpenak alda ditzake"</string>
     <string name="settings_banner_button" msgid="1831020849782670907">"Informazio gehiago"</string>
     <string name="settings_screen_title" msgid="721470080648091035">"Gailu finantzatuari buruzko informazioa"</string>
     <string name="settings_intro" msgid="5809531331925309396">"Kreditu bidezko gailu-hornitzaileak, ezarpenak aldatu, eta gailuan kiosko-aplikazioa instala dezake.\n\nBaliteke <xliff:g id="PROVIDER_NAME_0">%1$s</xliff:g> hornitzaileak gailua murriztea beharrezko ordainketak egiten ez badituzu edo <xliff:g id="PROVIDER_NAME_1">%1$s</xliff:g> hornitzailearen SIMa erabiltzeari uzten badiozu.\n\nInformazio gehiago lortzeko, jarri <xliff:g id="PROVIDER_NAME_2">%1$s</xliff:g> hornitzailearekin harremanetan."</string>
