--- a/DeviceLockController/res/values-fr-rCA/strings.xml
+++ b/DeviceLockController/res/values-fr-rCA/strings.xml
@@ -56,11 +56,11 @@
     <string name="start" msgid="2842214844667658537">"Commencer"</string>
     <string name="ok" msgid="3568398726528719749">"OK"</string>
     <string name="done" msgid="4507782734740410307">"OK"</string>
-    <string name="do_it_in_one_hour" msgid="2727777340568739453">"Reporter 1 heure"</string>
+    <string name="do_it_in_one_hour" msgid="2727777340568739453">"Dans 1 heure"</string>
     <string name="header_icon_content_description" msgid="6069602031334473195">"Info"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Infos sur provision"</string>
-    <string name="enroll_your_device_header" msgid="2226305405591945098">"Inscrire votre appareil"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Vous pouvez désormais inscrire votre appareil au programme de financement de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <string name="enroll_your_device_header" msgid="2226305405591945098">"Inscrire l\'appareil"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"Vous pouvez désormais inscrire votre appareil au programme de financement de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Vous pouvez désormais inscrire votre appareil au programme de subvention de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Vous bénéficiez d\'une subvention de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Inscription de l\'appareil"</string>
