--- a/DeviceLockController/res/values-hr/strings.xml
+++ b/DeviceLockController/res/values-hr/strings.xml
@@ -60,7 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Informacije"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Podaci o pristupu"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Prijavite svoj uređaj"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Odsad možete prijaviti svoj uređaj u financijski program davatelja usluge <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"Svoj uređaj sada možete prijaviti u financijski program davatelja usluge <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Odsad možete prijaviti svoj uređaj u program subvencioniranja davatelja usluge <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Uključeni ste u program subvencioniranja davatelja usluge <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Prijava uređaja"</string>
