--- a/DeviceLockController/res/values-hy/strings.xml
+++ b/DeviceLockController/res/values-hy/strings.xml
@@ -60,8 +60,8 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Տեղեկություններ"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Կարգավորման մասին"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Գրանցեք ձեր սարքը"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Դուք այժմ կարող եք գրանցել ձեր սարքը <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>-ի՝ ֆինանսավորման ծրագրում"</string>
-    <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Դուք այժմ կարող եք գրանցել ձեր սարքը <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>-ի՝ սուբսիդավորման ծրագրում"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"Դուք այժմ կարող եք գրանցել ձեր սարքը <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>-ի՝ ֆինանսավորման ծրագրում"</string>
+    <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Դուք այժմ կարող եք գրանցել ձեր սարքը <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>-ի սուբսիդավորման ծրագրում"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Դուք <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>-ի՝ սուբսիդավորման ծրագրի անդամ եք"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Սարքի գրանցում"</string>
     <string name="device_financing_enrollment_body_text" msgid="5506086383249511498">"Ձեր սարքը 30 օրվա ընթացքում կգրանցվի <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>-ի՝ ֆինանսավորման ծրագրում"</string>
