--- a/DeviceLockController/res/values-in/strings.xml
+++ b/DeviceLockController/res/values-in/strings.xml
@@ -31,9 +31,9 @@
     <string name="try_again" msgid="5964839819170927721">"Coba lagi"</string>
     <string name="reset_phone" msgid="1161657350311160627">"Reset ponsel"</string>
     <string name="control_section_title" msgid="2213476068991045785">"Apa yang dapat dilakukan <xliff:g id="CREDITOR_APP">%1$s</xliff:g>?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"Batasi perangkat ini jika Anda tidak melakukan pembayaran"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"Download, instal, dan update aplikasi <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"Nonaktifkan fitur proses debug"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"Membatasi perangkat ini jika Anda tidak melakukan pembayaran"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"Mendownload, menginstal, dan mengupdate aplikasi <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"Menonaktifkan fitur proses debug"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"Apa yang berfungsi jika perangkat ini dikunci?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"Layanan panggilan darurat"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Panggilan masuk dan beberapa panggilan keluar"</string>
@@ -60,7 +60,8 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Info"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Info penyediaan"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Daftarkan perangkat Anda"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Anda kini dapat mendaftarkan perangkat Anda ke program keuangan <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
+    <skip />
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Anda kini dapat mendaftarkan perangkat Anda ke program subsidi <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Anda bergabung dalam program subsidi <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Pendaftaran perangkat"</string>
