--- a/DeviceLockController/res/values-ja/strings.xml
+++ b/DeviceLockController/res/values-ja/strings.xml
@@ -48,7 +48,7 @@
     <string name="device_provided_by_provider" msgid="290593329676291991">"このデバイスは <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> から提供されています"</string>
     <string name="download_kiosk_app" msgid="1845089944897502656">"キオスクアプリは自動的にダウンロード、インストールされます"</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"このユーザーに対してキオスクアプリがインストールされます"</string>
-    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"支払いができなかった場合、<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> はこのデバイスを制限する可能性があります"</string>
+    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"支払いが行われなかった場合、<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> はこのデバイスを制限する可能性があります"</string>
     <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"必要な支払いを行わない場合、<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> はこのデバイスを制限する可能性があります。詳しくは、<xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>利用規約<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>をご覧ください。"</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"所有者が支払いを行わない場合、<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> はこのデバイスを制限する可能性があります"</string>
     <string name="previous" msgid="5241891780917802570">"前へ"</string>
@@ -60,7 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"情報"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"プロビジョニング情報"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"デバイスを登録する"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> の融資プログラムにデバイスを登録できるようになりました"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> の融資プログラムにデバイスを登録できるようになりました"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> の補助金プログラムにデバイスを登録できるようになりました"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> の補助金プログラムに参加しています"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"デバイスの登録"</string>
