--- a/DeviceLockController/res/values-km/strings.xml
+++ b/DeviceLockController/res/values-km/strings.xml
@@ -60,7 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"ព័ត៌មាន"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"ព័ត៌មានអំពីការផ្ដល់"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"ចុះឈ្មោះ​ឧបករណ៍​របស់អ្នក"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"ឥឡូវនេះ អ្នកអាចចុះឈ្មោះឧបករណ៍របស់អ្នកនៅក្នុងកម្មវិធីហិរញ្ញវត្ថុរបស់ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> បានហើយ"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"ឥឡូវនេះ អ្នកអាចចុះឈ្មោះឧបករណ៍របស់អ្នកនៅក្នុងកម្មវិធីឧបត្ថម្ភធនរបស់ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> បានហើយ"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"ឥឡូវនេះ អ្នកអាចចុះឈ្មោះឧបករណ៍របស់អ្នកនៅក្នុងកម្មវិធីឧបត្ថម្ភធនរបស់ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> បានហើយ"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"អ្នកកំពុងប្រើកម្មវិធីឧបត្ថម្ភធនរបស់ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"ការចុះឈ្មោះឧបករណ៍"</string>
