--- a/DeviceLockController/res/values-kn/strings.xml
+++ b/DeviceLockController/res/values-kn/strings.xml
@@ -38,7 +38,7 @@
     <string name="locked_emergency_text" msgid="3509216445555779286">"ತುರ್ತು ಕರೆ ಮಾಡುವಿಕೆ ಸೌಲಭ್ಯಗಳು"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"ಒಳಬರುವ ಮತ್ತು ಕೆಲವು ಹೊರಹೋಗುವ ಕರೆಗಳು"</string>
     <string name="locked_settings_usage_text" msgid="8336476063187737700">"ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</string>
-    <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;ನಿಮ್ಮ ಡೇಟಾವನ್ನು&lt;/a&gt; ಬ್ಯಾಕಪ್ ಮಾಡಲಾಗುತ್ತಿದೆ ಮತ್ತು ಮರುಸ್ಥಾಪಿಸಲಾಗುತ್ತಿದೆ"</string>
+    <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;ನಿಮ್ಮ ಡೇಟಾವನ್ನು&lt;/a&gt; ಬ್ಯಾಕಪ್ ಮಾಡುವುದು ಮತ್ತು ಮರುಸ್ಥಾಪಿಸುವುದು"</string>
     <string name="exposure_section_title" msgid="2329122144337528752">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ಗೆ ಏನು ಗೋಚರಿಸುತ್ತದೆ?"</string>
     <string name="exposure_install_text" msgid="2631074166447765453">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ಆ್ಯಪ್ ಅನ್ನು ಇನ್‌ಸ್ಟಾಲ್ ಅಥವಾ ಅನ್‌ಇನ್‌ಸ್ಟಾಲ್ ಮಾಡಿದಾಗ"</string>
     <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ನಿಂದ ಎಲ್ಲಾ ಲಾಕ್ ಅಥವಾ ಅನ್‌ಲಾಕ್ ವಿನಂತಿಗಳು"</string>
@@ -49,7 +49,7 @@
     <string name="download_kiosk_app" msgid="1845089944897502656">"kiosk ಆ್ಯಪ್ ಅನ್ನು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ಡೌನ್‌ಲೋಡ್ ಹಾಗೂ ಇನ್‌ಸ್ಟಾಲ್ ಮಾಡಲಾಗುತ್ತದೆ"</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"ಈ ಬಳಕೆದಾರರಿಗಾಗಿ Kiosk ಆ್ಯಪ್ ಅನ್ನು ಇನ್‌ಸ್ಟಾಲ್ ಮಾಡಲಾಗುತ್ತದೆ"</string>
     <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"ನೀವು ಪಾವತಿಯನ್ನು ಮಿಸ್ ಮಾಡಿಕೊಂಡರೆ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ಈ ಸಾಧನವನ್ನು ನಿರ್ಬಂಧಿಸಬಹುದು"</string>
-    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"ನೀವು ಅಗತ್ಯವಿರುವ ಪಾವತಿಗಳನ್ನು ಮಾಡದಿದ್ದರೆ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ಈ ಸಾಧನವನ್ನು ನಿಯಂತ್ರಿಸಬಹುದು. ವಿವರಗಳಿಗಾಗಿ, <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳನ್ನು<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g> ನೋಡಿ."</string>
+    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"ನೀವು ಅಗತ್ಯವಿರುವ ಪಾವತಿಗಳನ್ನು ಮಾಡದಿದ್ದರೆ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ಈ ಸಾಧನವನ್ನು ನಿರ್ಬಂಧಿಸಬಹುದು. ವಿವರಗಳಿಗಾಗಿ, <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳನ್ನು<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g> ನೋಡಿ."</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"ಮಾಲೀಕರು ಪಾವತಿಗಳನ್ನು ಮಾಡದಿದ್ದರೆ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ಈ ಸಾಧನವನ್ನು ನಿರ್ಬಂಧಿಸಬಹುದು"</string>
     <string name="previous" msgid="5241891780917802570">"ಹಿಂದಿನದು"</string>
     <string name="next" msgid="8248291863254324326">"ಮುಂದಿನದು"</string>
@@ -60,7 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"ಮಾಹಿತಿ"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"ಪೂರೈಕೆಯ ಮಾಹಿತಿ"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"ನಿಮ್ಮ ಸಾಧನವನ್ನು ನೋಂದಣಿ ಮಾಡಿ"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"ನೀವು ಈಗ ನಿಮ್ಮ ಸಾಧನವನ್ನು <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ನ ಹಣಕಾಸು ಪ್ರೋಗ್ರಾಂಗೆ ನೋಂದಣಿ ಮಾಡಬಹುದು"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"ನೀವು ಈಗ ನಿಮ್ಮ ಸಾಧನವನ್ನು <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ನ ಹಣಕಾಸು ಪ್ರೋಗ್ರಾಂಗೆ ನೋಂದಣಿ ಮಾಡಬಹುದು"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"ನೀವು ಈಗ ನಿಮ್ಮ ಸಾಧನವನ್ನು <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ನ ಸಬ್ಸಿಡಿ ಪ್ರೋಗ್ರಾಂನಲ್ಲಿ ನೋಂದಾಯಿಸಿಕೊಳ್ಳಬಹುದು"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"ನೀವು <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ನ ಸಬ್ಸಿಡಿ ಪ್ರೋಗ್ರಾಂನಲ್ಲಿದ್ದೀರಿ"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"ಸಾಧನದ ನೋಂದಣಿ"</string>
