--- a/DeviceLockController/res/values-lo/strings.xml
+++ b/DeviceLockController/res/values-lo/strings.xml
@@ -31,7 +31,7 @@
     <string name="try_again" msgid="5964839819170927721">"ລອງໃໝ່"</string>
     <string name="reset_phone" msgid="1161657350311160627">"ຣີເຊັດໂທລະສັບ"</string>
     <string name="control_section_title" msgid="2213476068991045785">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ສາມາດເຮັດຫຍັງໄດ້ແດ່?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"ກະລຸນາຈຳກັດອຸປະກອນນີ້ຫາກທ່ານບໍ່ໄດ້ຈ່າຍເງິນ"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"ຈຳກັດອຸປະກອນນີ້ຫາກທ່ານບໍ່ໄດ້ຈ່າຍເງິນ"</string>
     <string name="control_download_text" msgid="8514650561843088172">"ດາວໂຫຼດ, ຕິດຕັ້ງ ແລະ ອັບເດດແອັບ <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
     <string name="control_disable_debug_text" msgid="8112443250013094442">"ປິດຄຸນສົມບັດການດີບັກ"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"ມີຫຍັງໃຊ້ໄດ້ຫາກອຸປະກອນນີ້ຖືກລັອກ?"</string>
@@ -60,7 +60,8 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"ຂໍ້ມູນ"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"ຂໍ້ມູນການຈັດກຽມ"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"ລົງທະບຽນອຸປະກອນຂອງທ່ານ"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"ຕອນນີ້ທ່ານສາມາດລົງທະບຽນອຸປະກອນຂອງທ່ານໃນໂປຣແກຣມສະໜັບສະໜູນທາງການເງິນຂອງ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ໄດ້ແລ້ວ"</string>
+    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
+    <skip />
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"ຕອນນີ້ທ່ານສາມາດລົງທະບຽນອຸປະກອນຂອງທ່ານໃນໂປຣແກຣມສະໜັບສະໜູນທາງການເງິນຂອງ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ໄດ້ແລ້ວ"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"ທ່ານຢູ່ໃນໂປຣແກຣມສະໜັບສະໜູນທາງການເງິນຂອງ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"ການລົງທະບຽນອຸປະກອນ"</string>
