--- a/DeviceLockController/res/values-ml/strings.xml
+++ b/DeviceLockController/res/values-ml/strings.xml
@@ -60,7 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"വിവരങ്ങൾ"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"പ്രൊവിഷൻ വിവരങ്ങൾ"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"നിങ്ങളുടെ ഉപകരണം എൻറോൾ ചെയ്യുക"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"ഇപ്പോൾ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> എന്നതിന്റെ ഫിനാൻസിംഗ് പ്രോഗ്രാമിൽ നിങ്ങളുടെ ഉപകരണം എൻറോൾ ചെയ്യാനാകും"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"ഇപ്പോൾ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> എന്നതിന്റെ ഫിനാൻസ് പ്രോഗ്രാമിൽ നിങ്ങളുടെ ഉപകരണം എൻറോൾ ചെയ്യാനാകും"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"ഇപ്പോൾ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> എന്നതിന്റെ സബ്‌സിഡി പ്രോഗ്രാമിൽ നിങ്ങളുടെ ഉപകരണം എൻറോൾ ചെയ്യാനാകും"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"നിങ്ങൾ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> സബ്‌സിഡി പ്രോഗ്രാമിലുണ്ട്"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"ഉപകരണ എൻറോൾമെന്റ്"</string>
