--- a/DeviceLockController/res/values-mr/strings.xml
+++ b/DeviceLockController/res/values-mr/strings.xml
@@ -31,16 +31,16 @@
     <string name="try_again" msgid="5964839819170927721">"पुन्हा प्रयत्न करा"</string>
     <string name="reset_phone" msgid="1161657350311160627">"फोन रीसेट करा"</string>
     <string name="control_section_title" msgid="2213476068991045785">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> काय करू शकते?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"तुम्ही पेमेंट केले नसल्यास, हे डिव्हाइस प्रतिबंधित करा"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> अ‍ॅप डाउनलोड, इंस्टॉल आणि अपडेट करा"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"डीबगिंग वैशिष्‍ट्ये बंद करा"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"तुम्ही पेमेंट करत नसल्यास, हे डिव्हाइस प्रतिबंधित करणे"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> अ‍ॅप डाउनलोड, इंस्टॉल आणि अपडेट करणे"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"डीबगिंग वैशिष्‍ट्ये बंद करणे"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"हे डिव्हाइस लॉक असल्यास, काय काम करेल?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"आणीबाणी कॉलिंग सेवा"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"इनकमिंग आणि काही आउटगोइंग कॉल"</string>
     <string name="locked_settings_usage_text" msgid="8336476063187737700">"सेटिंग्ज"</string>
     <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582 तुमच्या डेटाचा &gt;बॅक अप घेणे व रिस्टोअर करणे&lt;/a&gt;"</string>
     <string name="exposure_section_title" msgid="2329122144337528752">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ला काय दृश्यमान असेल?"</string>
-    <string name="exposure_install_text" msgid="2631074166447765453">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ॲप कधी इंस्टॉल आणि अनइंस्टॉल केले आहे"</string>
+    <string name="exposure_install_text" msgid="2631074166447765453">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ॲप कधी इंस्टॉल किंवा अनइंस्टॉल केले आहे"</string>
     <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> कडून आलेल्या कोणत्याही लॉक किंवा अनलॉक विनंत्या"</string>
     <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ॲप उपलब्ध नसल्यास"</string>
     <string name="open_source_licenses" msgid="6464389386262455443">"मुक्त स्रोत परवाने"</string>
@@ -60,8 +60,9 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"माहिती"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"तरतुदीची माहिती"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"तुमच्या डिव्हाइसची नोंदणी करा"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"तुम्ही आता तुमच्या डिव्हाइसची नोंदणी <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> च्या अर्थविषयक प्रोग्राममध्ये करू शकता"</string>
-    <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"तुम्ही आता तुमच्या डिव्हाइसची नोंदणी <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> च्या सबसिडिविषयक प्रोग्राममध्ये करू शकता"</string>
+    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
+    <skip />
+    <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"तुम्ही आता तुमच्या डिव्हाइसची नोंदणी <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> च्या सबसिडीविषयक प्रोग्राममध्ये करू शकता"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"तुम्ही <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> च्या सबसिडी प्रोग्रामवर आहात"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"डिव्हाइसची नोंदणी"</string>
     <string name="device_financing_enrollment_body_text" msgid="5506086383249511498">"तुमच्या डिव्हाइसची नोंदणी <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> च्या अर्थविषयक प्रोग्राममध्ये ३० दिवसांमध्ये केली जाईल"</string>
