--- a/DeviceLockController/res/values-my/strings.xml
+++ b/DeviceLockController/res/values-my/strings.xml
@@ -30,10 +30,10 @@
     <string name="setup_error_title_text" msgid="1123742279081942535">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> အက်ပ်ကို ဖွင့်မရပါ"</string>
     <string name="try_again" msgid="5964839819170927721">"ထပ်စမ်းကြည့်ရန်"</string>
     <string name="reset_phone" msgid="1161657350311160627">"ဖုန်းကို ပြင်ဆင်သတ်မှတ်ရန်"</string>
-    <string name="control_section_title" msgid="2213476068991045785">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> သည် ဘာလုပ်နိုင်မလဲ။"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"သင် ငွေပေးချေခြင်း မပြုပါက ဤစက်ပစ္စည်းကို ကန့်သတ်ပါ"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> အက်ပ်ကို ဒေါင်းလုဒ်လုပ်ပါ။ ထည့်သွင်းပါ။ အပ်ဒိတ်လုပ်ပါ"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"အမှားရှာပြင်ခြင်း ဝန်ဆောင်မှုများကို ပိတ်ပါ"</string>
+    <string name="control_section_title" msgid="2213476068991045785">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ဘာလုပ်နိုင်မလဲ။"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"သင် ငွေပေးချေခြင်း မပြုပါက ဤစက်ပစ္စည်းကို ကန့်သတ်နိုင်သည်"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> အက်ပ်ကို ဒေါင်းလုဒ်လုပ်နိုင်၊ ထည့်သွင်းနိုင်၊ အပ်ဒိတ်လုပ်နိုင်သည်"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"အမှားရှာပြင်ခြင်း ဝန်ဆောင်မှုများကို ပိတ်နိုင်သည်"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"ဤစက်ကိုလော့ခ်ချထားလျှင် ဘယ်အရာကို လုပ်နိုင်မလဲ။"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"အရေးပေါ်ဖုန်းခေါ်ခြင်း ဝန်ဆောင်မှုများ"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"အဝင်နှင့် အချို့သော အထွက်ခေါ်ဆိုမှုများ"</string>
@@ -60,7 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"အချက်အလက်"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"ပံ့ပိုးမှု အချက်အလက်"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"သင့်စက်ကို စာရင်းသွင်းခြင်း"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"သင့်စက်ကို <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ၏ ငွေကြေးဆိုင်ရာ ပရိုဂရမ်တွင် စာရင်းသွင်းနိုင်ပါပြီ"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"သင့်စက်ကို <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ၏ ငွေကြေးဆိုင်ရာ အစီအစဉ်တွင် ယခု စာရင်းသွင်းနိုင်ပါပြီ"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"သင့်စက်ကို <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ၏ ထောက်ပံ့ကြေး ပရိုဂရမ်တွင် စာရင်းသွင်းနိုင်ပါပြီ"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"သင်သည် <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ၏ ထောက်ပံ့ကြေး ပရိုဂရမ်သုံးနေသည်"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"စက်ပစ္စည်း စာရင်းသွင်းခြင်း"</string>
