--- a/DeviceLockController/res/values-pl/strings.xml
+++ b/DeviceLockController/res/values-pl/strings.xml
@@ -31,9 +31,9 @@
     <string name="try_again" msgid="5964839819170927721">"Spróbuj ponownie"</string>
     <string name="reset_phone" msgid="1161657350311160627">"Resetuj telefon"</string>
     <string name="control_section_title" msgid="2213476068991045785">"Co mogę zrobić w aplikacji <xliff:g id="CREDITOR_APP">%1$s</xliff:g>?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"Jeśli nie dokonujesz płatności, zablokuj urządzenie"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"Pobierz, zainstaluj i zaktualizuj aplikację <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"Wyłącz funkcje debugowania"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"Blokuje to urządzenie, jeśli nie uregulujesz płatności"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"Pobiera, instaluje i aktualizuje aplikację <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"Wyłącza funkcje debugowania"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"Co działa po zablokowaniu urządzenia?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"Połączenia alarmowe"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Połączenia przychodzące i niektóre połączenia wychodzące"</string>
@@ -53,14 +53,15 @@
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> może zablokować to urządzenie, jeśli właściciel nie dokona płatności"</string>
     <string name="previous" msgid="5241891780917802570">"Wstecz"</string>
     <string name="next" msgid="8248291863254324326">"Dalej"</string>
-    <string name="start" msgid="2842214844667658537">"Od"</string>
+    <string name="start" msgid="2842214844667658537">"Zarejestruj"</string>
     <string name="ok" msgid="3568398726528719749">"OK"</string>
     <string name="done" msgid="4507782734740410307">"Gotowe"</string>
     <string name="do_it_in_one_hour" msgid="2727777340568739453">"Zrób to za 1 godzinę"</string>
     <string name="header_icon_content_description" msgid="6069602031334473195">"Informacje"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Informacje finansowe"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Zarejestruj swoje urządzenie"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Możesz teraz zarejestrować swoje urządzenie w programie finansowania <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
+    <skip />
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Możesz teraz zarejestrować swoje urządzenie w programie dotacji <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Korzystasz z programu dopłat <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Rejestrowanie urządzenia"</string>
