--- a/DeviceLockController/res/values-pt-rPT/strings.xml
+++ b/DeviceLockController/res/values-pt-rPT/strings.xml
@@ -31,9 +31,9 @@
     <string name="try_again" msgid="5964839819170927721">"Tentar novamente"</string>
     <string name="reset_phone" msgid="1161657350311160627">"Repor telemóvel"</string>
     <string name="control_section_title" msgid="2213476068991045785">"O que é que a app <xliff:g id="CREDITOR_APP">%1$s</xliff:g> consegue fazer?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"Restrinja este dispositivo se não fizer um pagamento"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"Transfira, instale e atualize a app <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"Desative as funcionalidades de depuração"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"Restringir este dispositivo se não fizer um pagamento"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"Transferir, instalar e atualizar a app <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"Desativar funcionalidades de depuração"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"O que irá funcionar se este dispositivo for bloqueado?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"Serviços de chamadas de emergência"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Chamadas recebidas e algumas chamadas feitas"</string>
@@ -45,7 +45,7 @@
     <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"Se a app <xliff:g id="CREDITOR_APP">%1$s</xliff:g> não estiver disponível"</string>
     <string name="open_source_licenses" msgid="6464389386262455443">"Licenças de código aberto"</string>
     <string name="footer_notice_content_description" msgid="2160540400079419440">"As capacidades de gestão na secção de dispositivos financiados das Definições de segurança não se aplicam a este dispositivo."</string>
-    <string name="device_provided_by_provider" msgid="290593329676291991">"Este dispositivo foi fornecido pelo fornecedor <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>."</string>
+    <string name="device_provided_by_provider" msgid="290593329676291991">"Este dispositivo foi fornecido pelo fornecedor <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="download_kiosk_app" msgid="1845089944897502656">"A app de quiosque vai ser transferida e instalada automaticamente"</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"A app de quiosque vai ser instalada para este utilizador"</string>
     <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"O fornecedor <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> pode restringir este dispositivo se falhar um pagamento"</string>
@@ -60,7 +60,8 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Informações"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Inf. de aprovision."</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Inscreva o seu dispositivo"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Já pode inscrever o seu dispositivo no programa de financiamento do fornecedor <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
+    <skip />
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Já pode inscrever o seu dispositivo no programa de subsídio do fornecedor <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Faz parte do programa de subsídio de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Inscrição do dispositivo"</string>
