--- a/DeviceLockController/res/values-ro/strings.xml
+++ b/DeviceLockController/res/values-ro/strings.xml
@@ -60,7 +60,8 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Informații"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Despre provizionare"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Înregistrează dispozitivul"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Îți poți înregistra acum dispozitivul în programul de finanțare <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
+    <skip />
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Îți poți înregistra acum dispozitivul în programul de subvenționare<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Faci parte din programul de subvenționare <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Înregistrarea dispozitivului"</string>
