--- a/DeviceLockController/res/values-ru/strings.xml
+++ b/DeviceLockController/res/values-ru/strings.xml
@@ -60,7 +60,8 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Информация"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Данные о настройке"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Зарегистрируйте устройство"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Вы можете зарегистрировать устройство в программе финансирования кредитора \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\"."</string>
+    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
+    <skip />
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Вы можете зарегистрировать устройство в программе субсидирования кредитора \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\"."</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Вы получаете субсидирование компании \"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>\""</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Регистрация устройства"</string>
