--- a/DeviceLockController/res/values-si/strings.xml
+++ b/DeviceLockController/res/values-si/strings.xml
@@ -60,7 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"තතු"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"ප්‍රතිපාදන තතු"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"ඔබේ උපාංගය ලියාපදිංචි කරන්න"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"ඔබට දැන් <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>ගේ මූල්‍ය වැඩසටහනට ඔබේ උපාංගය ලියාපදිංචි කළ හැක"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"ඔබට දැන් <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>ගේ සහනාධාර වැඩසටහනට ඔබේ උපාංගය ලියාපදිංචි කළ හැක"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"ඔබට දැන් <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>ගේ සහනාධාර වැඩසටහනට ඔබේ උපාංගය ලියාපදිංචි කළ හැක"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"ඔබ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>ගේ සහනාධාර වැඩසටහනේ සිටී"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"උපාංගය ලියාපදිංචි කිරීම"</string>
