--- a/DeviceLockController/res/values-sq/strings.xml
+++ b/DeviceLockController/res/values-sq/strings.xml
@@ -32,8 +32,8 @@
     <string name="reset_phone" msgid="1161657350311160627">"Rivendos telefonin"</string>
     <string name="control_section_title" msgid="2213476068991045785">"Çfarë mund të bëjë <xliff:g id="CREDITOR_APP">%1$s</xliff:g>?"</string>
     <string name="control_lock_device_text" msgid="8253302484073757764">"Të kufizojë këtë pajisje nëse nuk kryen një pagesë"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"Shkarko, instalo dhe përditëso aplikacionin <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"Çaktivizo veçoritë e korrigjimit"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"Të shkarkojë, instalojë dhe përditësojë aplikacionin <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"Të çaktivizojë veçoritë e korrigjimit"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"Çfarë funksionon nëse kjo pajisje kyçet?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"Shërbimet e telefonatave të urgjencës"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Telefonatat hyrëse dhe disa dalëse"</string>
@@ -60,7 +60,8 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Informacione"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Të dhëna: përgatitja"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Regjistro pajisjen tënde"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Tani mund ta regjistrosh pajisjen në programin e financimit të <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
+    <skip />
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Tani mund ta regjistrosh pajisjen tënde në programin e subvencionit të <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Je në programin e subvencionit të <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Regjistrimi i pajisjes"</string>
