--- a/DeviceLockController/res/values-sw/strings.xml
+++ b/DeviceLockController/res/values-sw/strings.xml
@@ -33,7 +33,7 @@
     <string name="control_section_title" msgid="2213476068991045785">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> inaweza kufanya nini?"</string>
     <string name="control_lock_device_text" msgid="8253302484073757764">"Kuweka vizuizi kwenye kifaa hiki usipolipa"</string>
     <string name="control_download_text" msgid="8514650561843088172">"Kupakua, kusakinisha na kusasisha programu ya <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"Zima vipengele vya utatuzi"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"Kuzima vipengele vya utatuzi"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"Ni vipengele vipi vitaendelea kutumika kifaa hiki kikifungwa?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"Huduma za simu za dharura"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Simu zinazoingia na baadhi ya simu unazopiga"</string>
@@ -60,7 +60,8 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Maelezo"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Maelezo ya fidia"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Sajili kifaa chako"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Sasa unaweza kusajili kifaa chako kwenye mpango wa ufadhili wa <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
+    <skip />
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Sasa unaweza kusajili kifaa chako kwenye mpango wa ruzuku wa <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Umesajiliwa kwenye mpango wa ruzuku wa <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Kusajili kifaa"</string>
