--- a/DeviceLockController/res/values-ta/strings.xml
+++ b/DeviceLockController/res/values-ta/strings.xml
@@ -40,7 +40,7 @@
     <string name="locked_settings_usage_text" msgid="8336476063187737700">"அமைப்புகள்"</string>
     <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;தரவைக்&lt;/a&gt; காப்புப் பிரதி எடுக்கலாம் &amp; மீட்டெடுக்கலாம்"</string>
     <string name="exposure_section_title" msgid="2329122144337528752">"எவையெல்லாம் <xliff:g id="CREDITOR_APP">%1$s</xliff:g> ஆப்ஸுக்குத் தெரியும்படி இருக்கும்?"</string>
-    <string name="exposure_install_text" msgid="2631074166447765453">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ஆப்ஸ் நிறுவப்படாமலோ நிறுவல் நீக்கப்பட்டோ இருப்பது"</string>
+    <string name="exposure_install_text" msgid="2631074166447765453">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ஆப்ஸ் எப்போது நிறுவப்பட்டது/நிறுவல் நீக்கப்பட்டது என்பது"</string>
     <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ஆப்ஸிடமிருந்து பெறப்பட்ட லாக்/அன்லாக் கோரிக்கைகள்"</string>
     <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"சாதனத்தில் <xliff:g id="CREDITOR_APP">%1$s</xliff:g> ஆப்ஸ் இல்லாமல் இருப்பது"</string>
     <string name="open_source_licenses" msgid="6464389386262455443">"ஓப்பன் சோர்ஸ் உரிமங்கள்"</string>
@@ -60,7 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"தகவல்கள்"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"வழங்கலுக்கான தகவல்"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"உங்கள் சாதனத்தைப் பதிவுசெய்யுங்கள்"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"உங்கள் சாதனத்தை <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> இன் நிதித் திட்டத்திற்கு இப்போது பதிவுசெய்யலாம்"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"உங்கள் சாதனத்தை <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> இன் நிதித் திட்டத்தில் இப்போது பதிவுசெய்யலாம்"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"உங்கள் சாதனத்தை <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> இன் மானியத் திட்டத்திற்கு இப்போது பதிவுசெய்யலாம்"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> மானியத் திட்டத்தில் உள்ளீர்கள்"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"சாதனத்தைப் பதிவுசெய்தல்"</string>
