--- a/DeviceLockController/res/values-th/strings.xml
+++ b/DeviceLockController/res/values-th/strings.xml
@@ -31,7 +31,7 @@
     <string name="try_again" msgid="5964839819170927721">"ลองอีกครั้ง"</string>
     <string name="reset_phone" msgid="1161657350311160627">"รีเซ็ตโทรศัพท์"</string>
     <string name="control_section_title" msgid="2213476068991045785">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> ทำอะไรได้บ้าง"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"จำกัดอุปกรณ์นี้หากคุณไม่ได้จะชำระเงิน"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"จำกัดอุปกรณ์นี้หากคุณไม่ได้ชำระเงิน"</string>
     <string name="control_download_text" msgid="8514650561843088172">"ดาวน์โหลด ติดตั้ง และอัปเดตแอป <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
     <string name="control_disable_debug_text" msgid="8112443250013094442">"ปิดฟีเจอร์การแก้ไขข้อบกพร่อง"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"มีอะไรใช้งานได้บ้างหากอุปกรณ์นี้ล็อกอยู่"</string>
@@ -60,7 +60,8 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"ข้อมูล"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"ข้อมูลการจัดเตรียม"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"ลงทะเบียนอุปกรณ์ของคุณ"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"ตอนนี้คุณลงทะเบียนอุปกรณ์ในโปรแกรมสนับสนุนทางการเงินของ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ได้แล้ว"</string>
+    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
+    <skip />
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"ตอนนี้คุณลงทะเบียนอุปกรณ์ในโปรแกรมสนับสนุนทางการเงินของ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ได้แล้ว"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"คุณอยู่ในโปรแกรมสนับสนุนทางการเงินของ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"การลงทะเบียนอุปกรณ์"</string>
