--- a/DeviceLockController/res/values-tl/strings.xml
+++ b/DeviceLockController/res/values-tl/strings.xml
@@ -60,7 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Impormasyon"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Info ng provision"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"I-enroll ang iyong device"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Puwede mo na ngayong i-enroll ang iyong device sa financing program ng <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"Puwede mo na ngayong i-enroll ang iyong device sa finance program ng <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Puwede mo na ngayong i-enroll ang iyong device sa subsidy program ng <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Nasa subsidy program ka ng <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Pag-enroll ng device"</string>
