--- a/DeviceLockController/res/values-tr/strings.xml
+++ b/DeviceLockController/res/values-tr/strings.xml
@@ -31,18 +31,18 @@
     <string name="try_again" msgid="5964839819170927721">"Tekrar dene"</string>
     <string name="reset_phone" msgid="1161657350311160627">"Telefonu sıfırla"</string>
     <string name="control_section_title" msgid="2213476068991045785">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> uygulamasının yapabileceği işlemler neler?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"Ödeme yapmazsanız bu cihaz kilitlenir"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> uygulamasını indirin, yükleyin ve güncelleyin"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"Hata ayıklama özelliklerini devre dışı bırakın"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"Ödeme yapmamanız halinde cihazı kilitleyebilir"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> uygulamasını indirebilir, yükleyebilir ve güncelleyebilir"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"Hata ayıklama özelliklerini devre dışı bırakabilir"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"Bu cihaz kilitlenirse neler çalışır?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"Acil durum araması hizmetleri"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Gelen ve bazı giden aramalar"</string>
     <string name="locked_settings_usage_text" msgid="8336476063187737700">"Ayarlar"</string>
     <string name="locked_backup_and_restore_text" msgid="104616318625243429">"Verilerinizi &lt;a href=https://support.google.com/android/answer/2819582&gt;yedekleme ve geri yükleme&lt;/a&gt;"</string>
     <string name="exposure_section_title" msgid="2329122144337528752">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> uygulaması neleri görebilir?"</string>
-    <string name="exposure_install_text" msgid="2631074166447765453">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> uygulamasının ne zaman yüklendiği veya kaldırıldığı"</string>
+    <string name="exposure_install_text" msgid="2631074166447765453">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> uygulamasının ne zaman yüklendiğini veya kaldırıldığını"</string>
     <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> uygulamasından tüm kilitleme ve kilidi açma istekleri"</string>
-    <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> uygulaması kullanılamıyorsa"</string>
+    <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> uygulamasının kullanılıp kullanılmadığını"</string>
     <string name="open_source_licenses" msgid="6464389386262455443">"Açık kaynak lisansları"</string>
     <string name="footer_notice_content_description" msgid="2160540400079419440">"Güvenlik ayarlarının finanse edilen cihaz bölümündeki yönetim özellikleri bu cihaza uygulanmaz."</string>
     <string name="device_provided_by_provider" msgid="290593329676291991">"Bu cihaz, <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> tarafından sağlanmaktadır"</string>
@@ -60,7 +60,8 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Bilgi"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Provizyon bilgileri"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Cihazınızı kaydettirin"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Cihazınızı artık <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> finans programına kaydedebilirsiniz"</string>
+    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
+    <skip />
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Cihazınızı artık <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> yardım programına kaydettirebilirsiniz"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> yardım programındasınız"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Cihaz kaydı"</string>
