--- a/DeviceLockController/res/values-zh-rCN/strings.xml
+++ b/DeviceLockController/res/values-zh-rCN/strings.xml
@@ -53,14 +53,14 @@
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"如果所有者未付款，<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>可以限制其使用此设备"</string>
     <string name="previous" msgid="5241891780917802570">"上一步"</string>
     <string name="next" msgid="8248291863254324326">"下一页"</string>
-    <string name="start" msgid="2842214844667658537">"开始"</string>
+    <string name="start" msgid="2842214844667658537">"立即开始"</string>
     <string name="ok" msgid="3568398726528719749">"确定"</string>
     <string name="done" msgid="4507782734740410307">"完成"</string>
-    <string name="do_it_in_one_hour" msgid="2727777340568739453">"1 小时后执行"</string>
+    <string name="do_it_in_one_hour" msgid="2727777340568739453">"1 小时后开始"</string>
     <string name="header_icon_content_description" msgid="6069602031334473195">"信息"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"配置信息"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"注册您的设备"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"您的设备现在就能注册<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>的分期付款计划"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"您的设备现在就能注册<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>的补贴计划"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"您的设备现在就能注册<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>的补贴计划"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"您已加入<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>的补贴计划"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"设备注册"</string>
