--- a/DeviceLockController/res/values-zh-rHK/strings.xml
+++ b/DeviceLockController/res/values-zh-rHK/strings.xml
@@ -60,7 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"資料"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"佈建資料"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"註冊裝置"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"裝置現可註冊「<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>」的分期付款計劃"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"現在可以為裝置註冊「<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>」分期付款計畫"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"裝置現可註冊「<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>」的資助計劃"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"你已加入「<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>」的資助計劃"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"裝置註冊"</string>
