--- a/DeviceLockController/res/values-zu/strings.xml
+++ b/DeviceLockController/res/values-zu/strings.xml
@@ -60,7 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Ulwazi"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Ulwazi lwelungiselelo"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Bhalisa idivayisi yakho"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="7378414469334757425">"Usungakwazi ubhalisa idivayisi ohlelweni lokuxhasa lwe-<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"Usungakwazi manje ukubhalisa idivayisi yakho ohlelweni lwezezimali lwe-<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Usungakwazi manje ukubhalisa idivayisi yakho ohlelweni losizo lwe-<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Usohlelweni losizo lwe-<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Ukubhaliswa kwedivayisa"</string>
